# Binary-calculations-lib

./: meson.build
include/: text_to_binary.h
src/: test_text_to_binary.c  text_to_binary.c
